cmake_minimum_required(VERSION 3.0.0)
project(P3_7 VERSION 0.1.0)

add_executable(P3_7 P3_7.cpp)
add_executable(P3_9 P3_9.cpp)
add_executable(P3_13 P3_13.cpp)
add_executable(P3_14 P3_14.cpp)
add_executable(P3_15 P3_15.cpp)
add_executable(P3_16 P3_16.cpp)
add_executable(P3_17 P3_17.cpp)
add_executable(P3_18 P3_18.cpp)
add_executable(P3_19 P3_19.cpp)
add_executable(P3_20 P3_20.cpp)
add_executable(P3_21 P3_21.cpp)